add actual Linux scripts in linuxbin #92